logs/jwt-interop-smoke.err.txt
E:\Shahdol-Bazaar-MVP\server\auth\jwt.ts:1
import { sign, verify } from 'jsonwebtoken';
         ^
SyntaxError: The requested module 'jsonwebtoken' does not provide an export named 'sign'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.1
npm notice
npm notice New major version of npm available! 10.9.4 -> 11.14.1
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.14.1
npm notice To update run: npm install -g npm@11.14.1
npm notice
